--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8090
 mybatis.mapperLocations=classpath:mapping/*.xml
-spring.datasource.name=seckill1
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/seckill1?useUnicode=true&characterEncoding=utf8
+spring.datasource.name=seckill
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/seckill?autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=password
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
