--- a/pom.xml
+++ b/pom.xml
@@ -83,18 +83,16 @@
     <dependency>
       <groupId>org.springframework.session</groupId>
       <artifactId>spring-session</artifactId>
-      <version>1.3.5.RELEASE</version>
+
     </dependency>
-
-
-    <!--    <dependency>-->
-<!--      <groupId>org.springframework.boot</groupId>-->
-<!--      <artifactId>spring-boot-starter-data-redis</artifactId>-->
-<!--    </dependency>-->
-<!--    <dependency>-->
-<!--      <groupId>org.springframework.session</groupId>-->
-<!--      <artifactId>spring-session-data-redis</artifactId>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.session</groupId>
+      <artifactId>spring-session-data-redis</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <pluginManagement>
