--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,18 @@ spring.datasource.password=password
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+# config tomcat server log
+#server.tomcat.accesslog.enabled=true
+#server.tomcat.accesslog.directory=/var/www/seckill/tomcat
+#server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b %D
+
+# config redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.database=10
+##spring.redis.password=
+
+# config jedis connection pool
+spring.redis.jedis.pool.max-active=50
+spring.redis.jedis.pool.min-idle=20
