--- a/nginx.conf
+++ b/nginx.conf
@@ -38,6 +38,8 @@ http {
 	keepalive 30;
     }
 
+    #proxy_cache_path /usr/local/openresty/nginx/tmp_cache levels=1:2 keys_zone=tmp_cache:100m inactive=7d max_size=10g;
+
     server {
         listen       80;
         server_name  localhost;
@@ -53,6 +55,9 @@ http {
 
 	location / {
 		proxy_pass http://backend_server;
+		#proxy_cache tmp_cache;
+		#proxy_cache_key $uri;
+		#proxy_cache_valid 200 206 304 302 7d;
 		proxy_set_header Host $http_host:$proxy_port;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
