build a in-memory cache bu lua script in nginx server

--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -30,6 +30,8 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
+    #init_by_lua_file ../lua/init.lua;
+
     #gzip  on;
     #
     upstream backend_server {
@@ -39,6 +41,8 @@ http {
     }
 
     #proxy_cache_path /usr/local/openresty/nginx/tmp_cache levels=1:2 keys_zone=tmp_cache:100m inactive=7d max_size=10g;
+    #
+    lua_shared_dict my_cache 128m;
 
     server {
         listen       80;
@@ -52,6 +56,20 @@ http {
             alias  /usr/local/openresty/nginx/html/resources/;
             index  index.html index.htm;
         }
+
+	location /staticitem/get {
+	    default_type "text/html";
+	    content_by_lua_file ../lua/staticitem.lua;
+	}
+
+	location /luaitem/get {
+	    default_type "application/json";
+	    content_by_lua_file ../lua/goodSharedDic.lua;
+	}
+
+	location /helloworld {
+	    content_by_lua_file ../lua/helloworld.lua;
+	}
 
 	location / {
 		proxy_pass http://backend_server;
