--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -64,7 +64,8 @@ http {
 
 	location /luaitem/get {
 	    default_type "application/json";
-	    content_by_lua_file ../lua/goodSharedDic.lua;
+	    #content_by_lua_file ../lua/goodSharedDic.lua;
+	    content_by_lua_file ../lua/goodRedis.lua;
 	}
 
 	location /helloworld {
