included rocketmq message broker to reduce stock in an async way

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.redis.database=10
 # config jedis connection pool
 spring.redis.jedis.pool.max-active=50
 spring.redis.jedis.pool.min-idle=20
+
+# config rocketmq
+mq.nameserver.addr=127.0.0.1:9876
+mq.topicname=stock
