--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
       <artifactId>guava</artifactId>
       <version>18.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.rocketmq</groupId>
+      <artifactId>rocketmq-client</artifactId>
+      <version>4.3.0</version>
+    </dependency>
   </dependencies>
   <build>
     <pluginManagement>
