--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,11 @@
           <version>1.3.5</version>
           <dependencies>
             <dependency>
+              <groupId>mysql</groupId>
+              <artifactId>mysql-connector-java</artifactId>
+              <version>5.1.44</version>
+            </dependency>
+            <dependency>
               <groupId>org.mybatis.generator</groupId>
               <artifactId>mybatis-generator-core</artifactId>
               <version>1.3.5</version>
@@ -159,7 +164,7 @@
           </executions>
           <configuration>
             <verbose>true</verbose>
-            <overwrite>false</overwrite>
+            <overwrite>true</overwrite>
             <configurationFile>
               src/main/resources/mybatis-generator.xml
             </configurationFile>
